# bluemetal

./: .gitignore  Cargo.toml  README.md  justfile  rust-toolchain.toml
.cargo/: config.toml
configure/cli/: Cargo.toml
configure/cli/src/: main.rs
configure/options/: Cargo.toml
configure/options/src/: lib.rs
configure/tui/: Cargo.toml
configure/tui/src/: main.rs
crates/bluemetal/: Cargo.toml  build.rs
crates/bluemetal/src/: entry.s  main.rs  trap.rs  trap.s
crates/configure/: Cargo.toml  build.rs
crates/configure/link/: sifive_fu540.ld
crates/configure/src/: fix-build-dep-bug.rs  lib.rs
crates/init/: Cargo.toml  build.rs
crates/init/src/: lib.rs  trap.rs  trap.s
crates/init/src/init/: riscv_m.s
crates/init/src/riscv/: init.s  trap.s
crates/panic/: Cargo.toml  build.rs
crates/panic/src/: debug.s  lib.rs  unwind.rs
crates/serial/: Cargo.toml  build.rs
crates/serial/src/: global.rs  lib.rs  sifive_uart.rs  uart16550.rs
profile/: qemu-riscv-virt.toml  sifive-fu540.toml
src/: ast.rs  lex.rs  lib.rs  parse.rs
tests/: oo.bm  parse.rs  print.bm  syscall.bm  test.bm
