[workspace]
resolver = "2"
members = ["configure/*", "crates/*"]

[workspace.metadata.rust-analyzer]
cargo.allTargets = false

[profile.dev]
panic = "unwind"
lto = "fat"

[profile.release]
panic = "abort"
lto = "fat"
codegen-units = 1

[profile.configure]
inherits = "dev"
panic = "unwind"
lto = "off"
